<?xml version="1.0"?>
<package format="2">
  <!-- many contents taken from https://github.com/IFL-CAMP/iiwa_stack/tree/master/iiwa_description -->
  <name>endoscope_description</name>
  <version>1.0.0</version>
  <description>Da Vinci surgical robot endoscope description files</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
