<?xml version="1.0"?>
<package format="2">
  <name>storz_straight_exoscope_hsi_description</name>
  <version>1.0.0</version>
  <description>Storz straight exoscope for hyperspectral imaging (HSI) with KUKA LBR Med connection description files</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
